--- a/alanlib_ita/ANNOTAZIONI_DOXTER.html
+++ b/alanlib_ita/ANNOTAZIONI_DOXTER.html
@@ -530,10 +530,22 @@ I frammenti delle regioni hanno un sottopeso; durante la fase di collatura del d
 <td class="tableblock halign-left valign-top"><p class="tableblock">== Le Restrizioni Verbali</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-right valign-top"><p class="tableblock"><code>3100</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>4100</code></p></td>
 <td class="tableblock halign-right valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>restrizioni_tradotte</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">=== Elenco delle Restrizioni Verbali</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>9000</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>1</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>intestazione</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">== L&#8217;Intestazione dell&#8217;Avventura (Banner)</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>20</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>intestazione</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">=== Attributi dell&#8217;Intestazione</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-right valign-top"><p class="tableblock"><code>50000</code></p></td>
@@ -637,7 +649,7 @@ I frammenti delle regioni hanno un sottopeso; durante la fase di collatura del d
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-10-14 16:53:25 ora legale Europa occidentale
+Last updated 2018-10-14 18:59:13 ora legale Europa occidentale
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
