Doxterize `lib_classi.i`

--- a/alanlib_ita/lib_verbi.html
+++ b/alanlib_ita/lib_verbi.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.6.1-Alpha,</span>
+<span id="revnumber">versione 0.6.2-Alpha,</span>
 <span id="revdate">2018-10-14</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
@@ -455,6 +455,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_todo">TODO</a>
 <ul class="sectlevel2">
 <li><a href="#_verbi_da_tradurre">Verbi da Tradurre</a></li>
+<li><a href="#_check_list">Check List</a></li>
 </ul>
 </li>
 </ul>
@@ -2010,13 +2011,19 @@ italiano del modulo dei verbi.</p>
 </tbody>
 </table>
 </div>
+<div class="sect2">
+<h3 id="_check_list">Check List</h3>
+<div class="paragraph">
+<p>Lista della spesa per le varie cosucce da fare:</p>
+</div>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.6.1-Alpha<br>
-Ultimo aggiornamento 2018-10-14 18:59:15 ora legale Europa occidentale
+Versione 0.6.2-Alpha<br>
+Ultimo aggiornamento 2018-10-14 22:39:50 ora legale Europa occidentale
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
