Doxterize `lib_luoghi.i` and `lib_supplemento.i`

--- a/alanlib_ita/ANNOTAZIONI_DOXTER.html
+++ b/alanlib_ita/ANNOTAZIONI_DOXTER.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revdate">2018-10-04</span>
+<span id="revdate">2018-10-15</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
@@ -453,6 +453,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_modulo_delle_definizioni">Modulo delle definizioni</a></li>
 <li><a href="#_modulo_dei_verbi">Modulo dei verbi</a></li>
 <li><a href="#_modulo_delle_classi">Modulo delle classi</a></li>
+<li><a href="#_modulo_dei_luoghi">Modulo dei luoghi</a></li>
+<li><a href="#_modulo_supplementare">Modulo supplementare</a></li>
 </ul>
 </li>
 </ul>
@@ -732,7 +734,117 @@ I frammenti delle regioni hanno un sottopeso; durante la fase di collatura del d
 </tr>
 <tr>
 <td class="tableblock halign-right valign-top"><p class="tableblock"><code>51000</code></p></td>
-<td class="tableblock halign-right valign-top"><p class="tableblock"><code>666</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>665-666</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>todo_checklist</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">=== Check List Doxter</p></td>
+</tr>
+</tbody>
+</table>
+</div>
+<div class="sect2">
+<h3 id="_modulo_dei_luoghi">Modulo dei luoghi</h3>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="./lib_luoghi.i" target="_blank" rel="noopener"><code>lib_luoghi.i</code></a></p>
+</li>
+</ul>
+</div>
+<table class="tableblock frame-all grid-all stretch">
+<colgroup>
+<col style="width: 10%;">
+<col style="width: 10%;">
+<col style="width: 20%;">
+<col style="width: 60%;">
+</colgroup>
+<thead>
+<tr>
+<th class="tableblock halign-right valign-top">weight</th>
+<th class="tableblock halign-right valign-top">subweight</th>
+<th class="tableblock halign-left valign-top"></th>
+<th class="tableblock halign-left valign-top">descrizione</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>100</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>1</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>intro</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">== Introduzione</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>50000</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>todo</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">TODO</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>51000</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>1-33</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>todo_checklist</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">=== Check List Generale</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>51000</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>665-666</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>todo_checklist</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">=== Check List Doxter</p></td>
+</tr>
+</tbody>
+</table>
+</div>
+<div class="sect2">
+<h3 id="_modulo_supplementare">Modulo supplementare</h3>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="./lib_supplemento.i" target="_blank" rel="noopener"><code>lib_supplemento.i</code></a></p>
+</li>
+</ul>
+</div>
+<table class="tableblock frame-all grid-all stretch">
+<colgroup>
+<col style="width: 10%;">
+<col style="width: 10%;">
+<col style="width: 20%;">
+<col style="width: 60%;">
+</colgroup>
+<thead>
+<tr>
+<th class="tableblock halign-right valign-top">weight</th>
+<th class="tableblock halign-right valign-top">subweight</th>
+<th class="tableblock halign-left valign-top"></th>
+<th class="tableblock halign-left valign-top">descrizione</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>100</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>1</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>intro</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">== Introduzione</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>1000</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>1</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>player_words</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">== Predefined Player Words</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>50000</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>todo</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">TODO</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>51000</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>1-33</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>todo_checklist</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">=== Check List Generale</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>51000</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>665-666</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>todo_checklist</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">=== Check List Doxter</p></td>
 </tr>
@@ -744,7 +856,7 @@ I frammenti delle regioni hanno un sottopeso; durante la fase di collatura del d
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-10-14 22:35:36 ora legale Europa occidentale
+Last updated 2018-10-15 00:14:57 ora legale Europa occidentale
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
