--- a/alanlib_ita/lib_verbi.html
+++ b/alanlib_ita/lib_verbi.html
@@ -555,9 +555,9 @@ Altresì noti come <em>comandi extradiegetici</em>.</p>
 <table class="tableblock frame-all grid-all stretch">
 <caption class="title">Tabella 1. Elenco Comandi di Partita</caption>
 <colgroup>
-<col style="width: 21.0526%;">
-<col style="width: 31.5789%;">
+<col style="width: 15.7894%;">
 <col style="width: 26.3157%;">
+<col style="width: 36.8421%;">
 <col style="width: 5.2631%;">
 <col style="width: 5.2631%;">
 <col style="width: 5.2631%;">
@@ -622,9 +622,9 @@ Altresì noti come <em>comandi extradiegetici</em>.</p>
 <table class="tableblock frame-all grid-all stretch">
 <caption class="title">Tabella 2. Elenco dei Comandi di Gioco</caption>
 <colgroup>
-<col style="width: 21.0526%;">
-<col style="width: 31.5789%;">
+<col style="width: 15.7894%;">
 <col style="width: 26.3157%;">
+<col style="width: 36.8421%;">
 <col style="width: 5.2631%;">
 <col style="width: 5.2631%;">
 <col style="width: 5.2631%;">
@@ -828,6 +828,15 @@ Altresì noti come <em>comandi extradiegetici</em>.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">compra (merce)</p></td>
 <td class="tableblock halign-center valign-top"></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>consulta</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">guarda, cerca, ricerca</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">consulta (fonte) riguardo (argomento)!</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">2</p></td>
 <td class="tableblock halign-center valign-top"></td>
 <td class="tableblock halign-center valign-top"></td>
 </tr>
@@ -1323,9 +1332,9 @@ o domande poste dal protagonista stesso (p.es. &#8220;chi sono?&#8221;, &#8220;s
 <table class="tableblock frame-all grid-all stretch">
 <caption class="title">Tabella 3. Elenco Comandi di Affermazioni o Domande</caption>
 <colgroup>
-<col style="width: 21.0526%;">
-<col style="width: 31.5789%;">
+<col style="width: 15.7894%;">
 <col style="width: 26.3157%;">
+<col style="width: 36.8421%;">
 <col style="width: 5.2631%;">
 <col style="width: 5.2631%;">
 <col style="width: 5.2631%;">
@@ -1495,13 +1504,6 @@ italiano del modulo dei verbi.</p>
 <td class="tableblock halign-left valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">climb on (surface)</p></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
-<td class="tableblock halign-center valign-top"></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>consult</code></p></td>
-<td class="tableblock halign-left valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">consult (source) about (topic)</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">2</p></td>
 <td class="tableblock halign-center valign-top"></td>
 </tr>
 <tr>
@@ -2023,7 +2025,7 @@ italiano del modulo dei verbi.</p>
 <div id="footer">
 <div id="footer-text">
 Versione 0.6.2-Alpha<br>
-Ultimo aggiornamento 2018-10-14 22:39:50 ora legale Europa occidentale
+Ultimo aggiornamento 2018-10-15 11:24:23 ora legale Europa occidentale
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
