--- a/alanlib_ita/lib_definizioni.html
+++ b/alanlib_ita/lib_definizioni.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.6.4-Alpha,</span>
+<span id="revnumber">versione 0.7.0-Alpha,</span>
 <span id="revdate">2018-10-15</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
@@ -479,7 +479,7 @@ Ad opera di Tristano Ajmone,  &#169; 2018, Artistic License 2.1.</p>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_le_restrizioni_verbali">Le Restrizioni Verbali</h2>
+<h2 id="_le_restrizioni_verbali"><a class="anchor" href="#_le_restrizioni_verbali"></a>Le Restrizioni Verbali</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>La libreria dispone di un meccanismo di <em>restrizioni verbabli</em> per limitare
@@ -496,7 +496,7 @@ e nel caso non lo fosse l&#8217;azione viene bloccata sul nascere, mostrando al
 giocatore il messaggio &#8220;Non puoi farlo.&#8221;.</p>
 </div>
 <div class="sect2">
-<h3 id="_elenco_delle_restrizioni_verbali">Elenco delle Restrizioni Verbali</h3>
+<h3 id="_elenco_delle_restrizioni_verbali"><a class="anchor" href="#_elenco_delle_restrizioni_verbali"></a>Elenco delle Restrizioni Verbali</h3>
 <div class="paragraph">
 <p>Questo è l&#8217;elenco degli attributi di restrizioni verbali sinora tradotti:</p>
 </div>
@@ -618,7 +618,7 @@ giocatore il messaggio &#8220;Non puoi farlo.&#8221;.</p>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_lintestazione_dellavventura_banner">L&#8217;Intestazione dell&#8217;Avventura (Banner)</h2>
+<h2 id="_lintestazione_dellavventura_banner"><a class="anchor" href="#_lintestazione_dellavventura_banner"></a>L&#8217;Intestazione dell&#8217;Avventura (Banner)</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>Ogni avventura creata con la Libreria ha una sua <em>intestazione</em> (detta anche
@@ -666,7 +666,7 @@ dettagli del testo del banner essa attingerà ai vari attributi di intestazione
 presenti nell&#8217;istanza <code>mia_AT</code> dell&#8217;avventura.</p>
 </div>
 <div class="sect2">
-<h3 id="_attributi_dellintestazione">Attributi dell&#8217;Intestazione</h3>
+<h3 id="_attributi_dellintestazione"><a class="anchor" href="#_attributi_dellintestazione"></a>Attributi dell&#8217;Intestazione</h3>
 <div class="paragraph">
 <p>L&#8217;istanza <code>mia_AT</code> (del <code>blocco_definizioni</code>) espone all&#8217;autore degli
 attributi per fornire i dettagli del banner che potrà (facoltativamente)
@@ -686,14 +686,14 @@ essere mostrato all&#8217;inizio della partita tramite il template dell&#8217;is
 </div>
 </div>
 <div class="sect1">
-<h2 id="_todo">TODO</h2>
+<h2 id="_todo"><a class="anchor" href="#_todo"></a>TODO</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>Questa sezione contiene l&#8217;elenco delle cose da fare per ultimare l&#8217;adattamento
 italiano del modulo delle definizioni.</p>
 </div>
 <div class="sect2">
-<h3 id="_restrizioni_verbali_da_tradurre">Restrizioni Verbali da Tradurre</h3>
+<h3 id="_restrizioni_verbali_da_tradurre"><a class="anchor" href="#_restrizioni_verbali_da_tradurre"></a>Restrizioni Verbali da Tradurre</h3>
 <div class="paragraph">
 <p>Questo è l&#8217;elenco degli attributi verbali non ancora tradotti:</p>
 </div>
@@ -768,7 +768,7 @@ italiano del modulo delle definizioni.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_check_list">Check List</h3>
+<h3 id="_check_list"><a class="anchor" href="#_check_list"></a>Check List</h3>
 <div class="paragraph">
 <p>Lista della spesa per le varie cosucce da fare:</p>
 </div>
@@ -778,8 +778,8 @@ italiano del modulo delle definizioni.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.6.4-Alpha<br>
-Ultimo aggiornamento 2018-10-15 00:14:59 ora legale Europa occidentale
+Versione 0.7.0-Alpha<br>
+Ultimo aggiornamento 2018-10-15 19:30:48 ora legale Europa occidentale
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
