--- a/alanlib_ita/lib_supplemento.html
+++ b/alanlib_ita/lib_supplemento.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.6.1-Alpha,</span>
+<span id="revnumber">versione 0.7.0-Alpha,</span>
 <span id="revdate">2018-10-15</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
@@ -471,7 +471,7 @@ Creato da Tristano Ajmone,  &#169; 2018, Artistic License 2.1.</p>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_introduzione">Introduzione</h2>
+<h2 id="_introduzione"><a class="anchor" href="#_introduzione"></a>Introduzione</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>Questo modulo della libreria (non presente nella StdLib originale inglese)
@@ -484,7 +484,7 @@ ciò avverrà, questo modulo sarà rimosso.</p>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_predefined_player_words">Predefined Player Words</h2>
+<h2 id="_predefined_player_words"><a class="anchor" href="#_predefined_player_words"></a>Predefined Player Words</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>Le <em>predefined Player Words</em> sono dei gruppi di vocaboli del giocatore
@@ -523,20 +523,20 @@ NOISE: go the</pre>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_todo">TODO</h2>
+<h2 id="_todo"><a class="anchor" href="#_todo"></a>TODO</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>Questa sezione contiene l&#8217;elenco delle cose da fare per ultimare l&#8217;adattamento
 italiano del modulo supplementare.</p>
 </div>
 <div class="sect2">
-<h3 id="_check_list">Check List</h3>
+<h3 id="_check_list"><a class="anchor" href="#_check_list"></a>Check List</h3>
 <div class="paragraph">
 <p>Lista della spesa per le varie cosucce da fare:</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_check_list_doxter">Check List Doxter</h3>
+<h3 id="_check_list_doxter"><a class="anchor" href="#_check_list_doxter"></a>Check List Doxter</h3>
 <div class="paragraph">
 <p>Finisci di trasformare commenti in documentazione Doxter:</p>
 </div>
@@ -568,8 +568,8 @@ italiano del modulo supplementare.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.6.1-Alpha<br>
-Ultimo aggiornamento 2018-10-15 00:14:59 ora legale Europa occidentale
+Versione 0.7.0-Alpha<br>
+Ultimo aggiornamento 2018-10-15 19:30:49 ora legale Europa occidentale
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
