--- a/alanlib_ita/lib_verbi.html
+++ b/alanlib_ita/lib_verbi.html
@@ -438,8 +438,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.6.2-Alpha,</span>
-<span id="revdate">2018-10-14</span>
+<span id="revnumber">versione 0.7.0-Alpha,</span>
+<span id="revdate">2018-10-15</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
 <div id="toc" class="toc2">
@@ -455,7 +455,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_todo">TODO</a>
 <ul class="sectlevel2">
 <li><a href="#_verbi_da_tradurre">Verbi da Tradurre</a></li>
-<li><a href="#_check_list">Check List</a></li>
+<li><a href="#_check_list_generale">Check List Generale</a></li>
+<li><a href="#_check_list_doxter">Check List Doxter</a></li>
 </ul>
 </li>
 </ul>
@@ -476,7 +477,7 @@ Ad opera di Tristano Ajmone,  &#169; 2018, Artistic License 2.1.</p>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_elenco_dei_verbi_italiani">Elenco dei Verbi Italiani</h2>
+<h2 id="_elenco_dei_verbi_italiani"><a class="anchor" href="#_elenco_dei_verbi_italiani"></a>Elenco dei Verbi Italiani</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>I verbi finora tradotti in italiano sono raggruppti in tre diversi gruppi:</p>
@@ -545,7 +546,7 @@ elencati in ordine alfabetico.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_meta_comandi_di_partita">Meta Comandi di Partita</h3>
+<h3 id="_meta_comandi_di_partita"><a class="anchor" href="#_meta_comandi_di_partita"></a>Meta Comandi di Partita</h3>
 <div class="paragraph">
 <p>Comandi che riguardano aspetti della partita (salvare, uscire, ecc.) anziché
 il mondo dell&#8217;avventura. Perlopiù META VERBS, il cui uso non fa scorrere il
@@ -615,7 +616,7 @@ Altresì noti come <em>comandi extradiegetici</em>.</p>
 </table>
 </div>
 <div class="sect2">
-<h3 id="_comandi_di_gioco">Comandi di Gioco</h3>
+<h3 id="_comandi_di_gioco"><a class="anchor" href="#_comandi_di_gioco"></a>Comandi di Gioco</h3>
 <div class="paragraph">
 <p>Comandi diretti al personaggio protagonista per interagire con l&#8217;avventura.</p>
 </div>
@@ -1321,7 +1322,7 @@ Altresì noti come <em>comandi extradiegetici</em>.</p>
 </table>
 </div>
 <div class="sect2">
-<h3 id="_comandi_di_affermazioni_o_domande">Comandi di Affermazioni o Domande</h3>
+<h3 id="_comandi_di_affermazioni_o_domande"><a class="anchor" href="#_comandi_di_affermazioni_o_domande"></a>Comandi di Affermazioni o Domande</h3>
 <div class="paragraph">
 <p>Questo gruppo include tutti quei comandi che non seguono la consueta forma
 in cui il giocatore impartisce un ordine diretto al personaggio protagonista
@@ -1430,14 +1431,14 @@ o domande poste dal protagonista stesso (p.es. &#8220;chi sono?&#8221;, &#8220;s
 </div>
 </div>
 <div class="sect1">
-<h2 id="_todo">TODO</h2>
+<h2 id="_todo"><a class="anchor" href="#_todo"></a>TODO</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>Questa sezione contiene l&#8217;elenco delle cose da fare per ultimare l&#8217;adattamento
 italiano del modulo dei verbi.</p>
 </div>
 <div class="sect2">
-<h3 id="_verbi_da_tradurre">Verbi da Tradurre</h3>
+<h3 id="_verbi_da_tradurre"><a class="anchor" href="#_verbi_da_tradurre"></a>Verbi da Tradurre</h3>
 <table class="tableblock frame-all grid-all stretch">
 <caption class="title">Tabella 4. Elenco dei Verbi Non Tradotti</caption>
 <colgroup>
@@ -2014,9 +2015,15 @@ italiano del modulo dei verbi.</p>
 </table>
 </div>
 <div class="sect2">
-<h3 id="_check_list">Check List</h3>
+<h3 id="_check_list_generale"><a class="anchor" href="#_check_list_generale"></a>Check List Generale</h3>
 <div class="paragraph">
 <p>Lista della spesa per le varie cosucce da fare:</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_check_list_doxter"><a class="anchor" href="#_check_list_doxter"></a>Check List Doxter</h3>
+<div class="paragraph">
+<p>Finisci di trasformare commenti in documentazione Doxter:</p>
 </div>
 </div>
 </div>
@@ -2024,8 +2031,8 @@ italiano del modulo dei verbi.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.6.2-Alpha<br>
-Ultimo aggiornamento 2018-10-15 11:24:23 ora legale Europa occidentale
+Versione 0.7.0-Alpha<br>
+Ultimo aggiornamento 2018-10-15 19:30:48 ora legale Europa occidentale
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
